...
                    SizedBox(height: 20.h),
                    Form(
                      key: _formKey,
                      child: Column(
                        children: <Widget>[
                          TextFormField(
                            key: const Key('fullNameField'),
                            controller: _fullNameController,
                            decoration: InputDecoration(
                              labelText: 'Nama Lengkap',
                              prefixIcon: Icon(Icons.person, size: 24.r),
                            ),
                            keyboardType: TextInputType.name,
...
                              return null;
                            },
                          ),
                          SizedBox(height: 16.h),

                          TextFormField(
                            key: const Key('nikField'),
                            controller: _nikController,
                            decoration: InputDecoration(
                              labelText: 'NIK',
                              prefixIcon: Icon(Icons.credit_card, size: 24.r),
                            ),
                            keyboardType: TextInputType.number,
...
                              return null;
                            },
                          ),
                          SizedBox(height: 16.h),

                          TextFormField(
                            key: const Key('addressField'),
                            controller: _address,
                            decoration: InputDecoration(
                              labelText: 'Alamat',
                              prefixIcon: Icon(Icons.home, size: 24.r),
                            ),
                            keyboardType: TextInputType.streetAddress,
...
                              return null;
                            },
                          ),
                          SizedBox(height: 16.h),

                          TextFormField(
                            key: const Key('phoneNumberField'),
                            controller: _noTeleponController,
                            decoration: InputDecoration(
                              labelText: 'Nomor Telepon',
                              prefixIcon: Icon(Icons.phone, size: 24.r),
                            ),
                            keyboardType: TextInputType.phone,
...
                              return null;
                            },
                          ),
                          SizedBox(height: 16.h),

                          TextFormField(
                            key: const Key('rtUniqueCodeField'),
                            controller: _uniqueCodeController,
                            decoration: InputDecoration(
                              labelText: 'Kode Unik RT',
                              prefixIcon: Icon(Icons.qr_code_scanner, size: 24.r),
                            ),
                            keyboardType: TextInputType.text,
...
                              return null;
                            },
                          ),
                          SizedBox(height: 16.h),

                          TextFormField(
                            key: const Key('emailField'),
                            controller: _emailController,
                            decoration: InputDecoration(
                              labelText: 'Email',
                              prefixIcon: Icon(Icons.email, size: 24.r),
                            ),
                            keyboardType: TextInputType.emailAddress,
...
                              return null;
                            },
                          ),
                          SizedBox(height: 16.h),

                            TextFormField(
                            key: const Key('passwordField'),
                            controller: _passwordController,
                            obscureText: !_isPasswordVisible,
                            decoration: InputDecoration(
                              labelText: 'Kata Sandi',
                              prefixIcon: Icon(Icons.lock, size: 24.r),
                              helperText: 'Minimal 6 karakter.',
...
                            },
                          ),
                          SizedBox(height: 30.h),
                          SizedBox(
                            width: double.infinity,
                            child: ElevatedButton(
                              key: const Key('submitButton'),
                              style: ElevatedButton.styleFrom(
                                backgroundColor: AppColors.primary400,
                                padding: EdgeInsets.symmetric(vertical: 16.h), // Padding vertikal dengan .h
                                shape: RoundedRectangleBorder(
                                  borderRadius: BorderRadius.circular(12.r),
                                ),
...
