...
                ),
              ),
            ),
            const SizedBox(height: 24),

            ElevatedButton(
              key: const Key('loginButton'),
              style: ElevatedButton.styleFrom(
                backgroundColor: AppColors.primary400,
                padding: const EdgeInsets.symmetric(vertical: 16),
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(12),
                ),
...
                  style: GoogleFonts.roboto(
                    fontSize: 15,
                    color: Colors.grey.shade700,
                  ),
                ),
                GestureDetector(
                  key: const Key('registrationOption'),
                  onTap: widget.onRegistrationOptionPressed,
                  child: Text(
                    'Daftar di sini',
                    style: GoogleFonts.roboto(
                      fontSize: 15,
                      fontWeight: FontWeight.bold,
...
